gccida/g1/maybe_eliminate_biv_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9077:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9077:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rax 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9080:1: error: use of undeclared identifier 'induction_1'
induction_1 *j; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9080:14: error: use of undeclared identifier 'j'
induction_1 *j; // rax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9085:1: error: use of undeclared identifier 'induction_1'
induction_1 *v20; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9085:14: error: use of undeclared identifier 'v20'; did you mean 'v10'?
induction_1 *v20; // rbx 
             ^~~
             v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9075:18: note: 'v10' declared here
unsigned __int16 v10; // dx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9086:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9088:4: error: expected ';' after expression
rtx mult_val; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9088:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9090:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9090:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9091:4: error: expected ';' after expression
rtx v26; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9091:5: error: use of undeclared identifier 'v26'
rtx v26; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9094:1: error: use of undeclared identifier 'induction_1'
induction_1 *i; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9094:14: error: use of undeclared identifier 'i'
induction_1 *i; // rax 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9098:6: error: use of undeclared identifier 'fmta'; did you mean 'fmt'?
rtx *fmta; // [rsp+18h] [rbp-50h] 
     ^~~~
     fmt
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9097:13: note: 'fmt' declared here
const char *fmt; // [rsp+18h] [rbp-50h] 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9098:5: error: invalid operands to binary expression ('struct rtx_def *' and 'const char *')
rtx *fmta; // [rsp+18h] [rbp-50h] 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9100:1: error: use of undeclared identifier 'induction_1'
induction_1 *tem; // [rsp+20h] [rbp-48h] 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/loop.c:9100:14: error: use of undeclared identifier 'tem'
induction_1 *tem; // [rsp+20h] [rbp-48h] 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv_1/src/obj/loop.o] Error 1
